# git-repos-analysis

./: .gitignore  Cargo.toml  plan.md
src/: main.rs
