[package]
name = "gitlab-clone-to-local"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4.39"
clap = { version = "4", features = ["derive"] }
git2 = "0.20.0"
regex = "1.11.1"
serde_json = "1"
tiktoken-rs = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "diff-extract"
path = "src/bin/diff_extract.rs"

[[bin]]
name = "diff-analyze"
path = "src/bin/diff_analyze.rs"

[dev-dependencies]
tempfile = "3"
